Fix boolean .env variables. Don't show comments by default, because spoilers

--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,4 @@
-# Subreddit without the /r/
+# Subreddit, without the /r/
 SUBREDDIT=
 
 # Create the webhooks. Both can be the same if wanted
@@ -6,5 +6,7 @@ WEBHOOK_POST=
 WEBHOOK_COMMENT=
 
 # Check what you want.
-WATCH_COMMENT=
-WATCH_POST=
+WATCH_COMMENT=true
+WATCH_POST=true
+
+SHOW_COMMENTS=false
