--- a/.env.example
+++ b/.env.example
@@ -4,6 +4,7 @@ SUBREDDIT=
 # Create the webhooks. Both can be the same if wanted
 WEBHOOK_POST=
 WEBHOOK_COMMENT=
+REQUESTS_PER_MINUTE=3
 
 # Check what you want.
 WATCH_COMMENT=true
