--- a/package.json
+++ b/package.json
@@ -1,12 +1,11 @@
 {
   "name": "reddit2discord",
-  "version": "1.0.0",
+  "version": "2.0.0",
   "description": "A minibot to post new posts from a subreddit to discord, ran from a raspberry pi",
-  "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node index.js",
-    "dev": "nodemon index.js"
+    "start": "ts-node src/index.ts",
+    "dev": "nodemon src/index.ts"
   },
   "keywords": [
     "reddit",
@@ -16,9 +15,14 @@
   "author": "MBA",
   "license": "ISC",
   "dependencies": {
+    "axios": "^0.27.2",
     "dotenv": "^10.0.0",
     "html-entities": "^2.3.2",
-    "nodemon": "^2.0.12",
-    "reddit-snooper": "^1.0.1"
+    "ts-node": "^10.7.0",
+    "typescript": "^4.6.3"
+  },
+  "devDependencies": {
+    "@types/node": "^17.0.29",
+    "nodemon": "^2.0.15"
   }
 }
