--- a/reddit2discord.service.example
+++ b/reddit2discord.service.example
@@ -8,7 +8,7 @@ User=nobody
 # Note Debian/Ubuntu uses 'nogroup', RHEL/Fedora uses 'nobody'
 Group=nogroup
 
-Environment=PATH=/usr/bin:/usr/local/bin
+Environment=PATH=/usr/bin:/usr/local/bin:<BIN_NODE_PATH>
 Environment=NODE_ENV=production
 
 WorkingDirectory=<ABSOLUTE_PATH_TO_FOLDER>
