more error treatment

--- a/.env.example
+++ b/.env.example
@@ -10,4 +10,7 @@ REQUESTS_PER_MINUTE=3
 WATCH_COMMENT=true
 WATCH_POST=true
 
+# Show text on comments, spoiler included
 SHOW_COMMENTS=false
+
+WEBHOOK_DEBUG=
